# CmakeLibraryProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
include/: Calculator.h
src/: Calculator.cpp
